# SusteelAible

./: .gitignore  4_create_embeddings.ipynb  CLAUDE.md  RAG1.ipynb  README.md  app.py  basic_EDA.ipynb  bert_1-final.ipynb  bert_1.ipynb  bert_2.ipynb  bla.xlsx  climate_summary.csv  effects_model_function.py  firms_df.csv  functions.py  model_notebook.ipynb  monitor_gpu.py  nlp.ipynb  other.ipynb  panel_data.csv  policy_affection.ipynb  pyproject.toml  requirements.txt  tmp.ipynb  tmp.py  todo.md  translate.ipynb  translate.py  validate_extraction.py  yet_another.ipynb
01_eda/: EDA_emissions.ipynb  baseline_model.ipynb  external_drivers_eda_and_model.ipynb  functions.py
02_models/: action_score_concept.ipynb  action_score_temporal.ipynb  baseline_model.ipynb  predictions.ipynb
03_nlp/: __init__.py  bert_1.ipynb  bert_1.py  bert_2.ipynb  bert_pipeline.py  data_loader.py  gpu_utils.py  llm_extract.py  preprocessing.py  rag.py  rag_1.ipynb  rag_pipeline.ipynb  rag_pipeline.py  run_all.ipynb  run_bert_pipeline.ipynb  run_rag_pipeline.ipynb  topic_gridsearch.py  topic_modelling.py
03_nlp/decarbonisation_tables/: barriers_company_007.csv
embeddings_output/: embedding.txt
nlp/: __init__.py  bert_1.py  bert_2.py  gpu_utils.py  json_loader.py  llm_extract.py  preprocessing.py  rag_1.py  rag_2.ipynb  rag_2.py  rag_pipeline.py  rag_test.py  run_all.ipynb  test.py  topic_gridsearch.py  topic_modelling.py
results/: RESULTS.md  project_overview.md  workflow.drawio  workflow.md
results/EDA/: stats_by_technology.csv
results/bert/: company_totals.csv  company_year.csv  funnel_company_year.csv  yearly_industry.csv
results/models/: action_scores_comparison.csv  action_scores_temporal.csv  (+2 more)
scripts/: data_loader.py  plotting_utils.py
(+43 files in other folders)
