[project]
name = "susteelaible"
version = "0.5"
description = "EDA of EU steel emission data and NLP pipeline analyzing sustainability reports to extract decarbonization barriers and motivators"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Core data science
    "scikit-learn==1.6",
    "numpy==1.26.4",
    "pandas==2.3.2",
    "matplotlib==3.10.8",
    "seaborn==0.12.2",
    "statsmodels==0.14.0",
    "plotly==6.3.0",
    "datamapplot==0.6.4",
    "umap-learn==0.5.11",
    "hdbscan==0.8.41",
    "bertopic==0.17.4",


    # Utilities
    "tabulate>=0.9.0",
    "tqdm>=4.65.0",
    "python-dotenv==1.0.1",
    "openpyxl==3.1.5",

    # PDF & Text Processing
    "PyMuPDF==1.26.6",
    "langid==1.1.6",
    "sacremoses==0.1.1",
    "spacy==3.8.11",
    "wordcloud==1.9.4",

    # Vector Store
    "faiss-cpu==1.12.0",

    # LangChain ecosystem
    "langchain>=0.3.0",
    "langchainhub>=0.1.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-ollama>=0.2.0",
    "langchain-groq>=0.3.0",
    "langchain-text-splitters>=0.3.0",

    # ML / Transformers
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "sentence-transformers>=2.2.0",
    "datasets>=2.14.0",
    "sentencepiece>=0.2.1",
]

[project.optional-dependencies]
# install with pip install -e ".[dev]"
dev = ["jupyterlab==4.2.5", "ipywidgets>=8.0"] # get rid of tqdm warning
gpu = ["faiss-gpu==1.12.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nlp", "eda"]

[tool.setuptools.package-dir]
nlp = "03_nlp"
eda = "01_eda"
